fix flicker on new task

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,8 +59,11 @@
     min-width: 160px;
   }
   .task-delete {
-    @apply text-center text-gray-400 hover:text-red-700 cursor-pointer;
+    @apply text-center;
     min-width: 40px;
+  }
+  .task-delete-btn {
+    @apply cursor-pointer text-gray-400 hover:text-red-700 p-2;
   }
 
   .featured-section {
